Closed Bug 1737914 Opened 4 years ago Closed 4 years ago

Perma Windows /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp(12,10): fatal error: 'mozilla/SandboxSettings.h' file not found

Categories

(Core :: Internationalization, defect, P5)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- unaffected
firefox95 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bobowen)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=356111351&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/N2k1L16tQcqvjTl2l8Itag/runs/0/artifacts/public/logs/live_backing.log


[task 2021-10-26T22:14:06.190Z] 22:14:06     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/intl/lwbrk'
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  /builds/worker/fetches/clang/bin/clang-cl -Xclang -std=c++17 -FonsUniscribeBreaker.obj -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -guard:cf -U_FORTIFY_SOURCE -Xclang -fno-common -DNDEBUG=1 -DTRIMMED=1 -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/intl/lwbrk -I/builds/worker/workspace/obj-build/intl/lwbrk -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -MD -FI /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -Qunused-arguments -fsanitize=address -fsanitize-blacklist=/builds/worker/checkouts/gecko/build/sanitizers/asan_blacklist_win.txt -fcrash-diagnostics-dir=/builds/worker/artifacts -fcrash-diagnostics-dir=/builds/worker/artifacts -fcrash-diagnostics-dir=/builds/worker/artifacts -TP -Zc:sizedDealloc- -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -Wno-inline-new-delete -Wno-invalid-offsetof -Wno-microsoft-enum-value -Wno-microsoft-include -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-invalid-noreturn -Wno-inconsistent-missing-override -Wno-implicit-exception-spec-mismatch -Wno-microsoft-exception-spec -Wno-unused-local-typedef -Wno-ignored-attributes -Wno-used-but-marked-unused -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Z7 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -Oy- -Werror -Xclang -fexperimental-new-pass-manager  -Xclang -MP -Xclang -dependency-file -Xclang .deps/nsUniscribeBreaker.obj.pp -Xclang -MT -Xclang nsUniscribeBreaker.obj   /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp(12,10): fatal error: 'mozilla/SandboxSettings.h' file not found
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  #include "mozilla/SandboxSettings.h"
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  1 error generated.
[task 2021-10-26T22:14:06.192Z] 22:14:06    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:661: nsUniscribeBreaker.obj] Error 1
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/intl/lwbrk'
[task 2021-10-26T22:14:06.192Z] 22:14:06    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: intl/lwbrk/target-objects] Error 2
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  gmake[3]: *** Waiting for unfinished jobs....
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/translator'
[task 2021-10-26T22:14:06.192Z] 22:14:06     INFO -  gfx/angle/targets/translator/FindSymbolNode.obj
Flags: needinfo?(bobowencode)
Summary: Perma /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp(12,10): fatal error: 'mozilla/SandboxSettings.h' file not found → Perma Windows ASan reporter /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp(12,10): fatal error: 'mozilla/SandboxSettings.h' file not found

Gah, forgot sandbox #ifs.

Assignee: nobody → bobowencode
Status: NEW → ASSIGNED
Flags: needinfo?(bobowencode)
Summary: Perma Windows ASan reporter /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp(12,10): fatal error: 'mozilla/SandboxSettings.h' file not found → Perma Windows /builds/worker/checkouts/gecko/intl/lwbrk/nsUniscribeBreaker.cpp(12,10): fatal error: 'mozilla/SandboxSettings.h' file not found

Set release status flags based on info from the regressing bug 1713973

Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/2e819aa356c0 Add missing MOZ_SANDBOX guards in nsUniscribeBreaker.cpp. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: