Bug 1737914: Add missing MOZ_SANDBOX guards in nsUniscribeBreaker.cpp. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D129637